5.3.3. Используя контейнер на базе связанного списка создать контейнер Stack и Queue. [#160][#49267]